knihovny a priprava html crawleru